# mpvfrog

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  icon.argb32
src/: ansi_parser.rs  ansi_term.rs  ansi_term_buf.rs  app.rs  bool_ext.rs  config.rs  ipc.rs  main.rs  mpv_handler.rs  rect_math.rs  runner.rs  time_fmt.rs
src/app/: core.rs  playlist.rs  playlist_behavior.rs  tray.rs  ui.rs
src/app/ui/: color_theme_window.rs  custom_demuxers_window.rs  custom_players_window.rs  mpv_console_window.rs
src/ipc/: command.rs  property.rs
src/util/: egui_ext.rs  result_ext.rs  str_ext.rs
