[package]
name = "mpvfrog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-sfml = "0.6.0"
pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "quickfix" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
directories = "5.0.1"
walkdir = "2.4.0"
nonblock = "0.2.0"
ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
thiserror = "1.0.56"
enum-kinds = "0.5.1"
interprocess = { version = "2.2", default-features = false }
anyhow = "1.0.79"
zbus = "4.1.2"
crossbeam-channel = "0.5.12"
x11 = {version = "2.21.0", features = ["xlib"]}
egui-modal = { git = "https://github.com/crumblingstatue/egui-modal.git", branch = "egui-0.29" }
egui-file-dialog = { git = "https://github.com/crumblingstatue/egui-file-dialog.git", branch = "egui-0.29" }
egui_colors = { git = "https://github.com/frankvgompel/egui_colors.git" }
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = true
