[package]
name = "mpvfrog"
version = "0.2.0-dev"
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-sf2g = "0.3.0"
pty-process = { git = "https://github.com/crumblingstatue/pty-process.git", branch = "as-raw-fd-pty-ref" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
directories = "6.0.0"
walkdir = "2.4.0"
nonblock = "0.2.0"
ansi_term_buf = { git = "https://github.com/crumblingstatue/ansi_term_buf.git" }
thiserror = "2"
enum-kinds = "0.5.1"
interprocess = { version = "2.2", default-features = false }
anyhow = "1.0.79"
zbus = "5"
crossbeam-channel = "0.5.12"
x11rb = "0.13"
egui-file-dialog = "0.10.0"
egui_colors = "0.8.0"
rand = "0.9.0"
existing_instance = "0.1.0"
fuzzy-matcher = "0.3.7"
clap.version = "4.5.37"
clap.default-features = false
clap.features = ["std", "help", "usage", "derive"]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = true
